--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,8 @@
     margin: 0;
     padding: 0;
     display: block;
-    width: 1500px;
-    height: 120vh;
-    border-radius: 20px;
+    width: 100%;
+    height: 100vh;
+    border-radius: 0px;
+    align: fixed;
 }
